# neuros-click

./: .gitignore  .prettierrc  README  README.md  index.html  neuro_ftp.html  neurosPOC.html  neuros_click_scaffold.html  pyproject.toml  refact.md
.github/workflows/: static.yml
assets/: 404.html  app.js  styles.css
assets/css/: styles.css
assets/js/: app.js  data.js  index.js  theme.js  types.js
assets/js/services/: app-controller.js  site-config.js
assets/js/ui/: cards.js  expander.js  footer.js  theme.js
assets/js/utils/: dom.js
assets/json/: neuro-ftp-clients.json  pages.json  site.json
assets/share/: neuros-click-filezilla.xml
css/: styles.css
data/: neuro-ftp-clients.json  pages.json  site.json
data/share/: neuros-click-filezilla.xml
helper/: add_page.py
js/: cards.js  expander.js  main.js  theme.js
neuro_ftp/: index.html
pages/: index.html
pages/css/: styles.css
pages/data/: neuro-ftp-clients.json  pages.json  site.json
pages/images/: neuroDinkDonk-1x.avif  neuroDinkDonk-2x.avif
pages/js/: cards.js  expander.js  main.js  theme.js
pages/neuro-ftp/: index.html
pages/neuro-synth/: index.html
src/: app.js  styles.css
